--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-pkg-resources==0.0.0
+dask==0.9.0
+decorator==4.0.10
+networkx==1.11
+numpy==1.11.0
+Pillow==3.2.0
 py==1.4.31
 pytest==2.9.2
+scikit-image==0.12.3
+six==1.10.0
+toolz==0.8.0
